Trying to better handle common files

--- a/packages/glhd-tailwindcss-transitions/package.json
+++ b/packages/glhd-tailwindcss-transitions/package.json
@@ -6,4 +6,7 @@
   "author": "Chris Morrell",
   "license": "MIT",
   "private": false,
+  "scripts": {
+  	"prepublish": "cp -f ../../README.md ./README.md"
+  }
 }
