--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ node_modules/
 dist/
 yarn-error.log
 lerna-debug.log
+
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+*.iws
