--- a/packages/glhd-tailwindcss-transitions/package.json
+++ b/packages/glhd-tailwindcss-transitions/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "prepublish": "yarn run build && cp -f ../../README.md ./README.md",
+    "prepublish": "cp -f ../../README.md ./README.md",
     "build": "babel src -d dist"
   }
 }
